Commit #2 Modifica al metodo di immissione attività Version 1.0.0.1

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -167,6 +167,11 @@
     <string>search</string>
    </property>
   </action>
+  <action name="actiontest">
+   <property name="text">
+    <string>test</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
