--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,7 +24,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>11</y>
+      <y>40</y>
       <width>671</width>
       <height>591</height>
      </rect>
@@ -36,6 +36,19 @@
       <x>10</x>
       <y>610</y>
       <width>291</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>10</y>
+      <width>221</width>
       <height>20</height>
      </rect>
     </property>
