--- a/calendardialog.ui
+++ b/calendardialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Select a date</string>
   </property>
   <widget class="QCalendarWidget" name="calendarWidget">
    <property name="geometry">
